fixed comment grammar issues